src/test/test-models/bad/compound-assign/plus_equals_bad_var_lhs.stan
functions {
  real foo(real a1) {
    foo += a1;
    return foo;
  }
}
